# FireSpreadingSimulation

./: .gitattributes  PLAN.md  README.md  launch_manhattan_ui.bat  launch_polatli_ui.bat  pyproject.toml
data/processed/: manhattan_buildings.json  manhattan_network.json  polatli_result.json
data/raw/: manhattan_buildings_metadata.json  manhattan_metadata.json  manhattan_osm_buildings.json  polatli_buildings_metadata.json  polatli_metadata.json  polatli_osm_roads.json
data/raw/polatli_osm_map_tiles/: tile_0_0.osm  tile_0_2.osm  tile_0_3.osm  tile_1_0.osm  tile_1_2.osm  tile_1_3.osm  tile_2_0.osm  tile_2_1.osm  tile_2_2.osm  tile_2_3.osm
examples/: sample_city.json
src/fire_spread/: __init__.py  buildings.py  cli.py  io.py  models.py  osm.py  propagation.py  urban_wind.py  web.py
tests/: test_buildings.py  test_osm.py  test_propagation.py  test_real_dataset.py  test_urban_wind.py
web/: app.js  index.html  styles.css
